# geng

./: CMakeLists.txt  README.md  basic  emscripten_build.bat  emscripten_build.sh
include/: geng.h  geng_enums.h
include/geng/: GEFlags.h  GERoles.h  Game.cpp  Game.h  Game.inl  GameBase.h  GameBase.inl  geng_config.h  sdlinclude.h
include/geng/ES/: CBody.h  CMovable.h  CNetworked.h  CRenderables.h  CTransform.h  ClientNetworkSystem.h  ClientNetworkSystem.inl  CollisionSystem.h  CollisionSystem.inl  CollisionsDebugSystem.h  CollisionsDebugSystem.inl  ECollidables.h  EMovable.h  ENonMovable.h  ERenderables.h  ES.h  ES_includes.h  ETransform.h  GameSystem.h  GengEntity.h  GengEntityFlags.h  GengEntityRoles.h  GengEntityTypes.h  GengSystem.h  GengSystemTypes.h  MovementSystem.h  RenderSystem.h  RenderSystem.inl  ServerNetworkSystem.h  ServerNetworkSystem.inl  StartTickSystem.h  TransformSystem.h
include/geng/core/: EntityResourcesManager.h  GengEntity.h  GengEntityTypes.h  GengSystem.h  Speed.h  core_common.h  core_includes.h
include/geng/core/Components/: CDeltaTransform.h  CDeltaTransform.inl  CMovable.h  CSpeed.h  CSpeed.inl  CTransform.h  CTransform.inl  CTreeTransform.h  CTreeTransform.inl
include/geng/core/Systems/: DeltaTransformSystem.h  MovementSystem.h  TreeTransformSystem.h  TreeTransformSystem.inl
include/geng/graphics/: AssetsManager.h  AssetsManager.inl  ControlHelpers.h  ControlHelpers.inl  CoordFrame.h  DrawSortingKey.h  Events.cpp  Events.h  Events.inl  Frame.h  GUI.h  GUI.inl  Geom.h  Geom.inl  Graphics.cpp  Graphics.h  GraphicsDomain.cpp  GraphicsDomain.h  NormOffset.h  Renderable.h  Renderable.inl  Renderables.h  Renderer2D.h  Renderer2D.inl  Shader.cpp  Shader.h  Shader.inl  Shaders.h  Shaders.inl  Texture2D.cpp  Texture2D.h  Texture2D.inl  Textures2DManager.cpp  Textures2DManager.h  Textures2DManager.inl  VertexData.h  VertexData.inl  Vertices.h  Vertices.inl  ViewPort.cpp  (+12 more)
include/geng/graphics/Components/: CRenderable.h  CRenderable.inl  CRenderables.h
include/geng/graphics/Entities/: DebugOverlay.h  DebugOverlay.inl  EBody.h  EBody.inl  EVisual.h  GUIElement.h
include/geng/graphics/Renderables/: CircleRenderable.h  CircleRenderable.inl  ImageRenderable.h  ImageRenderable.inl  ParticlesRenderable.h  ParticlesRenderable.inl  PgonRenderable.h  PgonRenderable.inl  PgonTexturedRenderable.h  PgonTexturedRenderable.inl  RectBorderRenderable.h  RectBorderRenderable.inl  RectRenderable.h  RectRenderable.inl  RenderBatchId.h  RenderBatchId.inl  RenderIndex.h  RenderIndex.inl  Renderable.h  Renderable.inl  RenderableBase.h  RenderableBase.inl  SpriteRenderable.h  SpriteRenderable.inl  TextRenderable.h  TextRenderable.inl  renderables_includes.h
include/geng/graphics/Shaders/: CircleShader.h  ParticleShader.h  RectBorderShader.h  RectShader.h  Shader.h  Shader.inl  SimpleColorShader.h  SimpleTexturedShader.h  SpriteShader.h  TextShader.h  shaders_include.h
include/geng/graphics/Systems/: CollisionsDebugSystem.h  CollisionsDebugSystem.inl  RenderSystem.h  RenderSystem.inl
include/geng/graphics/VertexData/: Geom.h  Geom.inl  GeomState.h  ParticleBatchStates.h  ParticleBatchStates.inl  SpriteAnimationStates.h  SpriteAnimationStates.inl  TextStates.h  TextStates.inl  VertexData.h  VertexData.inl  VertexDataP.h  VertexDataPT.h  VertexDataPT.inl  VertexDataParticles.h  VertexDataParticles.inl  geom_enums.h  vertexdata_includes.h
include/geng/graphics/VertexData/Factories/: FactoryRectT.h  FactoryRectT.inl  FactoryRectTF.h  FactoryRectTF.inl  geom_factories.h
include/geng/graphics/VertexData/GeomStates/: GeomStateBase.h  GeomStateBase.inl  GeomStateParticles.h  GeomStateParticles.inl  GeomStateSpriteAnimation.h  GeomStateSpriteAnimation.inl  GeomStateText.h  GeomStateText.inl  GeomStates.h  GeomStates.inl
include/geng/graphics/systems/: RenderSystem.h  RenderSystem.inl
include/geng/network/: ClientStateBase.h  Snapshots.h  Snapshots.inl  network_includes.h
include/geng/network/Components/: CNetworked.h  CNetworkedClient.h  CNetworkedServer.h
include/geng/network/Systems/: ClientNetworkSystem.h  ClientNetworkSystem.inl  ServerNetworkSystem.h  ServerNetworkSystem.inl
include/geng/physics/: Collidable.h  Physics.cpp  Physics.h  PhysicsDomain.cpp  PhysicsDomain.h  PhysicsManager.h  PhysicsManager.inl  Speed.h  motor_utils.h  physics_entities.h  physics_includes.h  physics_utils.h
include/geng/physics/Components/: CBody.h  CBody.inl  CCollider.h  CCollider.inl  CTreeJoint.h  CTreeJoint.inl
include/geng/physics/Entities/: EGhost.h  ETrigger.h
include/geng/physics/Systems/: BoundsDebugRenderSystem.h  BoundsDebugRenderSystem.inl  BoundsSystem.h  BoundsSystem.inl  CollisionSystem.h  CollisionSystem.inl  PhysicsSystem.h
include/geng/physics/systems/: MovementSystem.h
include/geng/setup/: geng_entities.h  geng_entity_props.def  geng_entity_roles.def  geng_systems.h
src/: MyAssets.h  MyGame.cpp  MyGame.h  MyGame.inl  basic.cpp  incl.h  main.cpp
src/entities/: Dude.h  Dude.inl  HUD.cpp  HUD.h  HUD.inl  MyEntity.cpp  MyEntity.h  MyEntity.inl  Shuttle.cpp  Shuttle.h  Shuttle.inl
src/sysent_setup/: entities.h  entity_props.def  entity_roles.def  systems.h
